Fix navbar list item spacing by changing margin from right to left

--- a/src/index.css
+++ b/src/index.css
@@ -44,7 +44,7 @@ body {
 }
 
 .navbar__list li {
-  margin-right: 2.4rem;
+  margin-left: 5rem;
 }
 
 .navbar__list li a {
